# osm-scripts

./: .gitignore  applyGpxToImages.py  disused-route.py  disused_route.py  disused_route_checkWhenRoutesHaveBeenChangedToDisused.py  disused_route_check_first_version.py  main.py  merge_shapefiles.py  paczkomaty_warszawa.py  pyproject.toml  requirements.txt  taginfoCountPerCountry.py
