[project]
name = "osm-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "exif>=1.6.1",
    "geojson>=3.2.0",
    "geopandas>=1.0.1",
    "gpxpy>=1.6.2",
    "httpx>=0.28.1",
    "overpy>=0.7",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
    "ty>=0.0.0a7",
]
